--- a/curso_typescript/.vscode/settings.json
+++ b/curso_typescript/.vscode/settings.json
@@ -1,11 +1,11 @@
 {
     "editor.codeActionsOnSave": {
-      "source.fixAll.eslint": true
+      "source.fixAll.eslint": "explicit"
     },
     "eslint.validate": ["javascript"],
     "window.zoomLevel": 4,
     "code-runner.executorMap": {
-      "typescript": "clear && npx ts-node --files"
+      "typescript": "cls && npx ts-node --files"
     },
     "code-runner.runInTerminal": true
   }
