--- a/curso_typescript/package.json
+++ b/curso_typescript/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "ts-node seu-arquivo.ts",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint:fix": "eslint ./src --ext .jsx,.js,.ts,.tsx --fix --ignore-path ./.gitignore --max-warnings=0",
